<resources>
    <string name="app_name">E-book Store</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_ebook">Cadastrar novo E-Book</string>
    <string name="title_activity_main">E-Book Store</string>
    <string name="title_home">Todos</string>
    <string name="title_novo">Adicionar</string>
    <string name="title_romance">Romances</string>
    <string name="title_negocios">Negócios</string>
    <string name="title_tecnicos">Técnicos</string>
    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="tipo">Gênero</string>
    <string name="sinopse">Sinopse</string>
    <string name="isbn">ISBN</string>
    <string name="urlpdf">Url do arquivo .pdf</string>
    <string name="urlimagem">Url da imagem</string>
    <string name="dicaTitulo">Título do E-book</string>
    <string name="dicaAutor">Autor do E-book</string>
    <string name="dicaSinopse">Breve descrição do E-book</string>
    <string name="dicaUrlpdf">http://www.ebook.com.br/novoebook.pdf</string>
    <string name="dicaUrlimagem">http://www.ebook.com.br/imagemebook.png</string>
    <string name="dicaIsbn">9999999999999</string>
</resources>
