<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_romances"
        android:icon="@drawable/romance"
        android:title="@string/title_romance" />

    <item
        android:id="@+id/navigation_negocios"
        android:icon="@drawable/negocios"
        android:title="@string/title_negocios" />

    <item
        android:id="@+id/navigation_tecnicos"
        android:icon="@drawable/tecnicos"
        android:title="@string/title_tecnicos" />
    <item
        android:id="@+id/navigation_ebook"
        android:icon="@drawable/click3"
        android:title="@string/title_novo" />

</menu>
